--- a/Asignments/assignment1.html
+++ b/Asignments/assignment1.html
@@ -37,5 +37,10 @@
                 </tr>
             </tbody>
         </table>
+        <ol type="A">
+            <li>Pancakes</li>
+            <li>Waffles</li>
+            <li>Crepes</li>
+        </ol>
     </body>
 </html>
